--- a/index.html
+++ b/index.html
@@ -1,63 +1,25 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>إدارة مزرعة ابو سيف وابو نمر</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap');
-        body { font-family: 'Cairo', sans-serif; background-color: #f7fee7; }
-        .map-shadow { box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04); }
-    </style>
-</head>
-<body class="min-h-screen">
-
-    <header class="bg-green-800 text-white p-8 shadow-2xl text-center border-b-4 border-yellow-500">
-        <h1 class="text-4xl font-bold">🌴 مزرعة ابو سيف وابو نمر</h1>
-        <p class="text-green-200 mt-2 text-lg">نظام الإدارة الشامل والذكاء الاصطناعي</p>
-    </header>
-
-    <main class="max-w-6xl mx-auto p-4 md:p-10">
-        
-        <section class="bg-white rounded-3xl shadow-xl overflow-hidden border border-green-100 mb-8">
-            <div class="p-6 bg-green-50 border-b border-green-100 flex justify-between items-center">
-                <h2 class="text-2xl font-bold text-green-800 flex items-center gap-2">
-                    🏠 حالة المزرعة الآن
-                </h2>
-                <span class="bg-green-500 text-white px-4 py-1 rounded-full text-sm animate-pulse">متصل مباشر</span>
-            </div>
-            
-            <div class="p-8 grid grid-cols-1 md:grid-cols-3 gap-6 text-center">
-                <div class="p-4 bg-white border rounded-2xl shadow-sm">
-                    <p class="text-gray-500">درجة الحرارة</p>
-                    <p class="text-3xl font-bold text-orange-600">28°C</p>
-                </div>
-                <div class="p-4 bg-white border rounded-2xl shadow-sm">
-                    <p class="text-gray-500">رطوبة التربة</p>
-                    <p class="text-3xl font-bold text-blue-600">45%</p>
-                </div>
-                <div class="p-4 bg-white border rounded-2xl shadow-sm">
-                    <p class="text-gray-500">عدد النخيل</p>
-                    <p class="text-3xl font-bold text-green-700">120</p>
-                </div>
-            </div>
-        </section>
-
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-            <button class="bg-green-700 hover:bg-green-600 text-white p-6 rounded-2xl shadow-lg transition-all transform hover:scale-105 font-bold text-xl">
-                📋 سجل المهام اليومية
-            </button>
-            <button class="bg-yellow-600 hover:bg-yellow-500 text-white p-6 rounded-2xl shadow-lg transition-all transform hover:scale-105 font-bold text-xl">
-                💧 جدولة الري الذكي
-            </button>
+<button class="w-full bg-green-600 text-white font-bold py-5 rounded-2xl text-xl hover:bg-green-500 shadow-lg shadow-green-200">تأكيد الحجز المبدئي</button>
+            </form>
         </div>
+    </div>
 
-    </main>
+    <div class="fixed bottom-6 left-6">
+        <div id="chatBox" class="hidden w-80 h-96 bg-white shadow-2xl rounded-2xl border flex flex-col mb-4 overflow-hidden">
+            <div class="bg-blue-600 p-4 text-white font-bold flex justify-between">
+                <span>🤖 المساعد الذكي</span>
+                <button onclick="toggleChat()">✕</button>
+            </div>
+            <div class="flex-1 p-4 overflow-y-auto text-sm bg-gray-50" id="chatContent">
+                <p class="bg-blue-100 p-2 rounded-lg mb-2">أهلاً بك في مزرعة ابو سيف وابو نمر! أنا المجيب الآلي، كيف يمكنني مساعدتك في الحجز اليوم؟</p>
+            </div>
+            <input type="text" placeholder="اسأل المساعد..." class="p-4 border-t outline-none">
+        </div>
+        <button onclick="toggleChat()" class="bg-blue-600 text-white p-5 rounded-full shadow-2xl hover:scale-110 transition-all">💬</button>
+    </div>
 
-    <footer class="text-center p-10 text-gray-500">
-        <p>© 2026 جميع الحقوق محفوظة - مزرعة ابو سيف وابو نمر</p>
-    </footer>
-
+    <script>
+        function toggleChat() { document.getElementById('chatBox').classList.toggle('hidden'); }
+        function openAdmin() { alert('سيتم تحويلك للوحة الإدارة الشاملة (تتطلب رمز المرور لتغيير تفاصيل المزرعة)'); }
+    </script>
 </body>
 </html>
