--- a/index.html
+++ b/index.html
@@ -1,25 +1,43 @@
-<button class="w-full bg-green-600 text-white font-bold py-5 rounded-2xl text-xl hover:bg-green-500 shadow-lg shadow-green-200">تأكيد الحجز المبدئي</button>
+getElementById('id1').click()" class="bg-blue-600 text-white px-6 py-2 rounded-xl text-sm hover:bg-blue-700">اختر الملف</button>
+                    </div>
+                    <div class="p-6 border-2 border-dashed border-blue-100 rounded-3xl text-center bg-blue-50/50">
+                        <label class="block font-bold text-blue-800 mb-2">إرسال بطاقة السكن</label>
+                        <input type="file" id="id2" class="hidden">
+                        <button type="button" onclick="document.getElementById('id2').click()" class="bg-blue-600 text-white px-6 py-2 rounded-xl text-sm hover:bg-blue-700">اختر الملف</button>
+                    </div>
+                </div>
+
+                <button type="submit" class="w-full bg-green-600 text-white font-bold py-5 rounded-2xl text-xl hover:bg-green-500 shadow-lg shadow-green-100 transition-all">تأكيد طلب الحجز المبدئي</button>
             </form>
         </div>
-    </div>
+    </main>
 
-    <div class="fixed bottom-6 left-6">
-        <div id="chatBox" class="hidden w-80 h-96 bg-white shadow-2xl rounded-2xl border flex flex-col mb-4 overflow-hidden">
-            <div class="bg-blue-600 p-4 text-white font-bold flex justify-between">
-                <span>🤖 المساعد الذكي</span>
-                <button onclick="toggleChat()">✕</button>
+    <div class="fixed bottom-6 left-6 z-50">
+        <div id="chatBox" class="hidden w-80 h-[450px] bg-white shadow-2xl rounded-3xl border border-blue-100 flex flex-col mb-4 overflow-hidden">
+            <div class="bg-blue-900 p-4 text-white font-bold flex justify-between items-center">
+                <span class="flex items-center gap-2">🤖 المساعد الذكي</span>
+                <button onclick="toggleChat()" class="hover:bg-blue-800 p-1 rounded-lg">✕</button>
             </div>
-            <div class="flex-1 p-4 overflow-y-auto text-sm bg-gray-50" id="chatContent">
-                <p class="bg-blue-100 p-2 rounded-lg mb-2">أهلاً بك في مزرعة ابو سيف وابو نمر! أنا المجيب الآلي، كيف يمكنني مساعدتك في الحجز اليوم؟</p>
+            <div class="flex-1 p-4 overflow-y-auto bg-gray-50 space-y-3">
+                <p class="bg-blue-100 text-blue-900 p-3 rounded-2xl text-sm">أهلاً بك في مزرعة ابو سيف وابو نمر! أنا المجيب الآلي، كيف يمكنني مساعدتك في الحجز اليوم؟</p>
+                <div class="flex flex-col gap-2">
+                    <button class="text-xs bg-white border border-blue-200 p-2 rounded-lg text-blue-700 text-right hover:bg-blue-50">ما هي أسعار النصف يوم؟</button>
+                    <button class="text-xs bg-white border border-blue-200 p-2 rounded-lg text-blue-700 text-right hover:bg-blue-50">هل المسبح مفلتر؟</button>
+                </div>
             </div>
-            <input type="text" placeholder="اسأل المساعد..." class="p-4 border-t outline-none">
+            <div class="p-4 border-t flex gap-2">
+                <input type="text" placeholder="اسألني أي شيء..." class="flex-1 text-sm outline-none">
+                <button class="text-blue-600">◀️</button>
+            </div>
         </div>
-        <button onclick="toggleChat()" class="bg-blue-600 text-white p-5 rounded-full shadow-2xl hover:scale-110 transition-all">💬</button>
+        <button onclick="toggleChat()" class="bg-blue-900 text-white p-5 rounded-full shadow-2xl hover:scale-110 transition-all flex items-center justify-center">
+            <span class="text-2xl">💬</span>
+        </button>
     </div>
 
     <script>
         function toggleChat() { document.getElementById('chatBox').classList.toggle('hidden'); }
-        function openAdmin() { alert('سيتم تحويلك للوحة الإدارة الشاملة (تتطلب رمز المرور لتغيير تفاصيل المزرعة)'); }
+        function openAdmin() { alert('سيتم تحويلك للوحة الإدارة الشاملة (تتطلب رمز مرور المدير لتعديل صور وتفاصيل المزرعة)'); }
     </script>
 </body>
 </html>
