--- a/index.html
+++ b/index.html
@@ -1,43 +1,58 @@
-getElementById('id1').click()" class="bg-blue-600 text-white px-6 py-2 rounded-xl text-sm hover:bg-blue-700">اختر الملف</button>
-                    </div>
-                    <div class="p-6 border-2 border-dashed border-blue-100 rounded-3xl text-center bg-blue-50/50">
-                        <label class="block font-bold text-blue-800 mb-2">إرسال بطاقة السكن</label>
-                        <input type="file" id="id2" class="hidden">
-                        <button type="button" onclick="document.getElementById('id2').click()" class="bg-blue-600 text-white px-6 py-2 rounded-xl text-sm hover:bg-blue-700">اختر الملف</button>
-                    </div>
-                </div>
+<select class="w-full p-4 border-2 border-slate-100 rounded-2xl bg-white outline-none">
+                                    <option>👨‍👩‍👧‍👦 عائلة</option>
+                                    <option>👬 شباب</option>
+                                </select>
+                            </div>
+                            <div>
+                                <label class="block text-sm font-bold text-slate-600 mb-2">مدة التأجير</label>
+                                <select class="w-full p-4 border-2 border-slate-100 rounded-2xl bg-white outline-none">
+                                    <option>🕒 نصف يوم (صباحي/مسائي)</option>
+                                    <option>📅 يوم كامل (مبيت)</option>
+                                </select>
+                            </div>
+                        </div>
 
-                <button type="submit" class="w-full bg-green-600 text-white font-bold py-5 rounded-2xl text-xl hover:bg-green-500 shadow-lg shadow-green-100 transition-all">تأكيد طلب الحجز المبدئي</button>
-            </form>
+                        <div class="p-6 border-2 border-dashed border-blue-200 rounded-3xl bg-blue-50/50">
+                            <p class="text-blue-900 font-bold mb-4 flex items-center gap-2">🆔 التحقق من الهوية (طلب إلزامي)</p>
+                            <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                                <button type="button" class="bg-white border-2 border-blue-200 text-blue-700 p-4 rounded-2xl text-sm font-bold hover:bg-blue-100 transition-all">📎 البطاقة الموحدة</button>
+                                <button type="button" class="bg-white border-2 border-blue-200 text-blue-700 p-4 rounded-2xl text-sm font-bold hover:bg-blue-100 transition-all">📎 بطاقة السكن</button>
+                            </div>
+                        </div>
+
+                        <button class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-5 rounded-2xl text-xl shadow-xl shadow-blue-200 transition-all">تأكيد الطلب عبر الواتساب</button>
+                    </form>
+                </div>
+            </div>
         </div>
     </main>
 
-    <div class="fixed bottom-6 left-6 z-50">
-        <div id="chatBox" class="hidden w-80 h-[450px] bg-white shadow-2xl rounded-3xl border border-blue-100 flex flex-col mb-4 overflow-hidden">
-            <div class="bg-blue-900 p-4 text-white font-bold flex justify-between items-center">
-                <span class="flex items-center gap-2">🤖 المساعد الذكي</span>
-                <button onclick="toggleChat()" class="hover:bg-blue-800 p-1 rounded-lg">✕</button>
+    <div class="fixed bottom-8 left-8 z-50">
+        <div id="aiChat" class="hidden w-80 h-[480px] bg-white shadow-2xl rounded-[2rem] border-2 border-blue-50 flex flex-col mb-4 overflow-hidden animate-bounce-in">
+            <div class="bg-blue-900 p-5 text-white flex justify-between items-center">
+                <span class="font-bold flex items-center gap-2">🤖 المساعد الذكي (Bot)</span>
+                <button onclick="toggleAI()">✕</button>
             </div>
-            <div class="flex-1 p-4 overflow-y-auto bg-gray-50 space-y-3">
-                <p class="bg-blue-100 text-blue-900 p-3 rounded-2xl text-sm">أهلاً بك في مزرعة ابو سيف وابو نمر! أنا المجيب الآلي، كيف يمكنني مساعدتك في الحجز اليوم؟</p>
-                <div class="flex flex-col gap-2">
-                    <button class="text-xs bg-white border border-blue-200 p-2 rounded-lg text-blue-700 text-right hover:bg-blue-50">ما هي أسعار النصف يوم؟</button>
-                    <button class="text-xs bg-white border border-blue-200 p-2 rounded-lg text-blue-700 text-right hover:bg-blue-50">هل المسبح مفلتر؟</button>
-                </div>
+            <div class="flex-1 p-5 overflow-y-auto bg-slate-50 space-y-4 text-sm" id="chatContent">
+                <div class="bg-blue-100 text-blue-900 p-3 rounded-2xl rounded-tr-none">أهلاً بك يا فخر المزرعة! أنا الذكاء الاصطناعي الخاص بـ "ابو سيف وابو نمر". كيف أساعدك في تنظيم حجزك؟</div>
             </div>
-            <div class="p-4 border-t flex gap-2">
-                <input type="text" placeholder="اسألني أي شيء..." class="flex-1 text-sm outline-none">
-                <button class="text-blue-600">◀️</button>
+            <div class="p-4 bg-white border-t flex gap-2">
+                <input type="text" placeholder="اكتب سؤالك هنا..." class="flex-1 outline-none text-sm">
+                <button class="bg-blue-600 text-white p-2 rounded-xl">◀️</button>
             </div>
         </div>
-        <button onclick="toggleChat()" class="bg-blue-900 text-white p-5 rounded-full shadow-2xl hover:scale-110 transition-all flex items-center justify-center">
+        <button onclick="toggleAI()" class="bg-blue-900 text-white p-6 rounded-3xl shadow-2xl hover:scale-110 transition-all flex items-center gap-2">
             <span class="text-2xl">💬</span>
+            <span class="font-bold">اسأل الذكاء الاصطناعي</span>
         </button>
     </div>
 
     <script>
-        function toggleChat() { document.getElementById('chatBox').classList.toggle('hidden'); }
-        function openAdmin() { alert('سيتم تحويلك للوحة الإدارة الشاملة (تتطلب رمز مرور المدير لتعديل صور وتفاصيل المزرعة)'); }
+        function toggleAI() { document.getElementById('aiChat').classList.toggle('hidden'); }
+        function openAdmin() { 
+            const pass = prompt("يرجى إدخال رمز المدير للدخول للصلاحيات الشاملة:");
+            if(pass === "1234") alert("أهلاً بك يا مدير المزرعة! جاري تحميل لوحة التعديل...");
+        }
     </script>
 </body>
 </html>
