--- a/index.html
+++ b/index.html
@@ -1,58 +1,16 @@
-<select class="w-full p-4 border-2 border-slate-100 rounded-2xl bg-white outline-none">
-                                    <option>👨‍👩‍👧‍👦 عائلة</option>
-                                    <option>👬 شباب</option>
-                                </select>
-                            </div>
-                            <div>
-                                <label class="block text-sm font-bold text-slate-600 mb-2">مدة التأجير</label>
-                                <select class="w-full p-4 border-2 border-slate-100 rounded-2xl bg-white outline-none">
-                                    <option>🕒 نصف يوم (صباحي/مسائي)</option>
-                                    <option>📅 يوم كامل (مبيت)</option>
-                                </select>
-                            </div>
-                        </div>
-
-                        <div class="p-6 border-2 border-dashed border-blue-200 rounded-3xl bg-blue-50/50">
-                            <p class="text-blue-900 font-bold mb-4 flex items-center gap-2">🆔 التحقق من الهوية (طلب إلزامي)</p>
-                            <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                                <button type="button" class="bg-white border-2 border-blue-200 text-blue-700 p-4 rounded-2xl text-sm font-bold hover:bg-blue-100 transition-all">📎 البطاقة الموحدة</button>
-                                <button type="button" class="bg-white border-2 border-blue-200 text-blue-700 p-4 rounded-2xl text-sm font-bold hover:bg-blue-100 transition-all">📎 بطاقة السكن</button>
-                            </div>
-                        </div>
-
-                        <button class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-5 rounded-2xl text-xl shadow-xl shadow-blue-200 transition-all">تأكيد الطلب عبر الواتساب</button>
-                    </form>
-                </div>
+<div class="bg-blue-900 p-4 text-white font-bold flex justify-between">
+                <span>المساعد الذكي</span>
+                <button onclick="toggleChat()">✕</button>
             </div>
+            <div class="flex-1 p-4 bg-gray-50 text-sm overflow-y-auto">
+                <div class="bg-blue-100 text-blue-900 p-3 rounded-2xl rounded-tr-none mb-2">أهلاً بك يا فخر المزرعة! أنا الذكاء الاصطناعي الخاص بـ "ابو سيف وابو نمر". كيف أساعدك؟</div>
+            </div>
+            <div class="p-4 border-t flex gap-2"><input type="text" placeholder="اكتب هنا..." class="flex-1 text-sm outline-none"><button class="text-blue-600 font-bold">ارسل</button></div>
         </div>
-    </main>
-
-    <div class="fixed bottom-8 left-8 z-50">
-        <div id="aiChat" class="hidden w-80 h-[480px] bg-white shadow-2xl rounded-[2rem] border-2 border-blue-50 flex flex-col mb-4 overflow-hidden animate-bounce-in">
-            <div class="bg-blue-900 p-5 text-white flex justify-between items-center">
-                <span class="font-bold flex items-center gap-2">🤖 المساعد الذكي (Bot)</span>
-                <button onclick="toggleAI()">✕</button>
-            </div>
-            <div class="flex-1 p-5 overflow-y-auto bg-slate-50 space-y-4 text-sm" id="chatContent">
-                <div class="bg-blue-100 text-blue-900 p-3 rounded-2xl rounded-tr-none">أهلاً بك يا فخر المزرعة! أنا الذكاء الاصطناعي الخاص بـ "ابو سيف وابو نمر". كيف أساعدك في تنظيم حجزك؟</div>
-            </div>
-            <div class="p-4 bg-white border-t flex gap-2">
-                <input type="text" placeholder="اكتب سؤالك هنا..." class="flex-1 outline-none text-sm">
-                <button class="bg-blue-600 text-white p-2 rounded-xl">◀️</button>
-            </div>
-        </div>
-        <button onclick="toggleAI()" class="bg-blue-900 text-white p-6 rounded-3xl shadow-2xl hover:scale-110 transition-all flex items-center gap-2">
-            <span class="text-2xl">💬</span>
-            <span class="font-bold">اسأل الذكاء الاصطناعي</span>
-        </button>
     </div>
 
     <script>
-        function toggleAI() { document.getElementById('aiChat').classList.toggle('hidden'); }
-        function openAdmin() { 
-            const pass = prompt("يرجى إدخال رمز المدير للدخول للصلاحيات الشاملة:");
-            if(pass === "1234") alert("أهلاً بك يا مدير المزرعة! جاري تحميل لوحة التعديل...");
-        }
+        function toggleChat() { document.getElementById('chatBox').classList.toggle('hidden'); }
     </script>
 </body>
 </html>
