--- a/index.html
+++ b/index.html
@@ -1,3 +1,156 @@
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>مزرعة ابو سيف وابو نمر | الفخامة والذكاء</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700;900&display=swap" rel="stylesheet">
+    <style>
+        body { font-family: 'Cairo', sans-serif; background-color: #f8fafc; }
+        .hero-bg { background: linear-gradient(135deg, #1e3a8a 0%, #3b82f6 100%); }
+    </style>
+</head>
+<body class="min-h-screen">
+
+    <nav class="bg-white/90 backdrop-blur-md sticky top-0 z-50 border-b border-blue-100 p-4 shadow-sm">
+        <div class="max-w-7xl mx-auto flex justify-between items-center">
+            <span class="text-2xl font-black text-blue-900">🏠 مزرعة ابو سيف وابو نمر</span>
+            <button class="bg-blue-900 text-white px-6 py-2 rounded-full font-bold text-sm">لوحة المدير</button>
+        </div>
+    </nav>
+
+    <section class="hero-bg text-white py-16 px-4 text-center">
+        <h2 class="text-4xl md:text-5xl font-extrabold mb-4">أرقى تجربة ترفيهية بلمسة ذكية 💎</h2>
+        <p class="text-blue-100 text-lg mb-8 max-w-2xl mx-auto">نظام حجز متطور وتواصل مباشر مع الذكاء الاصطناعي لخدمتكم</p>
+    </section>
+
+    <main class="max-w-4xl mx-auto p-6 -mt-12">
+        <div class="bg-white rounded-[2rem] shadow-2xl p-8 border border-blue-50">
+            <h3 class="text-2xl font-bold text-blue-900 mb-8 border-b pb-4">📝 طلب حجز (يومي / نصف يومي)</h3>
+            
+            <form class="space-y-6">
+                <div>
+                    <label class="block text-gray-700 font-bold mb-2">الاسم الكامل للمستأجر</label>
+                    <input type="text" placeholder="الاسم الثلاثي كما في الهوية" class="w-full p-4 border-2 border-gray-100 rounded-2xl outline-none focus:border-blue-500 bg-gray-50">
+                </div>
+
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                    <div>
+                        <label class="block text-gray-700 font-bold mb-2">نوع المستأجر</label>
+                        <select class="w-full p-4 border-2 border-gray-100 rounded-2xl bg-white"><option>👨‍👩‍👧‍👦 عائلة</option><option>👬 شباب</option></select>
+                    </div>
+                    <div>
+                        <label class="block text-gray-700 font-bold mb-2">مدة التأجير</label>
+                        <select class="w-full p-4 border-2 border-gray-100 rounded-2xl bg-white"><option>🕒 نصف يوم</option><option>📅 يوم كامل (مبيت)</option></select>
+                    </div>
+                </div>
+
+                <div class="p-6 border-2 border-dashed border-blue-100 rounded-3xl bg-blue-50/30 text-center">
+                    <p class="font-bold text-blue-800 mb-4">🆔 إرفاق الوثائق الرسمية (إلزامي)</p>
+                    <div class="flex flex-wrap justify-center gap-4">
+                        <button type="button" class="bg-white border border-blue-200 px-6 py-3 rounded-xl text-sm font-bold text-blue-700 hover:bg-blue-100">📎 البطاقة الموحدة</button>
+                        <button type="button" class="bg-white border border-blue-200 px-6 py-3 rounded-xl text-sm font-bold text-blue-700 hover:bg-blue-100">📎 بطاقة السكن</button>
+                    </div>
+                </div>
+
+                <button class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-5 rounded-2xl text-xl shadow-lg transition-all">تأكيد طلب الحجز</button>
+            </form>
+        </div>
+    </main>
+
+    <div class="fixed bottom-6 left-6 z-50 text-left">
+        <button onclick="toggleChat()" class="bg-blue-900 text-white p-5 rounded-2xl shadow-2xl hover:scale-110 transition-all font-bold flex items-center gap-2">
+            <span>🤖</span> اسأل المساعد الذكي
+        </button>
+        <div id="chatBox" class="hidden w-80 h-[450px] bg-white shadow-2xl rounded-3xl border border-blue-100 flex flex-col mb-4 overflow-hidden absolute bottom-20 left-0">
+          LAYTH AMER ALI, [2/11/2026 9:29 PM]
+<div class="bg-blue-900 p-4 text-white font-bold flex justify-between">
+                <span>المساعد الذكي</span>
+                <button onclick="toggleChat()">✕</button>
+            </div>
+            <div class="flex-1 p-4 bg-gray-50 text-sm overflow-y-auto">
+                <div class="bg-blue-100 text-blue-900 p-3 rounded-2xl rounded-tr-none mb-2">أهلاً بك يا فخر المزرعة! أنا الذكاء الاصطناعي الخاص بـ "ابو سيف وابو نمر". كيف أساعدك؟</div>
+            </div>
+            <div class="p-4 border-t flex gap-2"><input type="text" placeholder="اكتب هنا..." class="flex-1 text-sm outline-none"><button class="text-blue-600 font-bold">ارسل</button></div>
+        </div>
+    </div>
+
+    <script>
+        function toggleChat() { document.getElementById('chatBox').classList.toggle('hidden'); }
+    </script>
+</body>
+</html>
+
+LAYTH AMER ALI, [2/11/2026 9:31 PM]
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>مزرعة ابو سيف وابو نمر | الفخامة والذكاء</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700;900&display=swap" rel="stylesheet">
+    <style>
+        body { font-family: 'Cairo', sans-serif; background-color: #f8fafc; }
+        .hero-bg { background: linear-gradient(135deg, #1e3a8a 0%, #3b82f6 100%); }
+    </style>
+</head>
+<body class="min-h-screen">
+
+    <nav class="bg-white/90 backdrop-blur-md sticky top-0 z-50 border-b border-blue-100 p-4 shadow-sm">
+        <div class="max-w-7xl mx-auto flex justify-between items-center">
+            <span class="text-2xl font-black text-blue-900">🏠 مزرعة ابو سيف وابو نمر</span>
+            <button class="bg-blue-900 text-white px-6 py-2 rounded-full font-bold text-sm">لوحة المدير</button>
+        </div>
+    </nav>
+
+    <section class="hero-bg text-white py-16 px-4 text-center">
+        <h2 class="text-4xl md:text-5xl font-extrabold mb-4">أرقى تجربة ترفيهية بلمسة ذكية 💎</h2>
+        <p class="text-blue-100 text-lg mb-8 max-w-2xl mx-auto">نظام حجز متطور وتواصل مباشر مع الذكاء الاصطناعي لخدمتكم</p>
+    </section>
+
+    <main class="max-w-4xl mx-auto p-6 -mt-12">
+        <div class="bg-white rounded-[2rem] shadow-2xl p-8 border border-blue-50">
+            <h3 class="text-2xl font-bold text-blue-900 mb-8 border-b pb-4">📝 طلب حجز (يومي / نصف يومي)</h3>
+            
+            <form class="space-y-6">
+                <div>
+                    <label class="block text-gray-700 font-bold mb-2">الاسم الكامل للمستأجر</label>
+                    <input type="text" placeholder="الاسم الثلاثي كما في الهوية" class="w-full p-4 border-2 border-gray-100 rounded-2xl outline-none focus:border-blue-500 bg-gray-50">
+                </div>
+
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                    <div>
+                        <label class="block text-gray-700 font-bold mb-2">نوع المستأجر</label>
+                        <select class="w-full p-4 border-2 border-gray-100 rounded-2xl bg-white"><option>👨‍👩‍👧‍👦 عائلة</option><option>👬 شباب</option></select>
+                    </div>
+                    <div>
+                        <label class="block text-gray-700 font-bold mb-2">مدة التأجير</label>
+                        <select class="w-full p-4 border-2 border-gray-100 rounded-2xl bg-white"><option>🕒 نصف يوم</option><option>📅 يوم كامل (مبيت)</option></select>
+                    </div>
+                </div>
+
+                <div class="p-6 border-2 border-dashed border-blue-100 rounded-3xl bg-blue-50/30 text-center">
+                    <p class="font-bold text-blue-800 mb-4">🆔 إرفاق الوثائق الرسمية (إلزامي)</p>
+                    <div class="flex flex-wrap justify-center gap-4">
+                        <button type="button" class="bg-white border border-blue-200 px-6 py-3 rounded-xl text-sm font-bold text-blue-700 hover:bg-blue-100">📎 البطاقة الموحدة</button>
+                        <button type="button" class="bg-white border border-blue-200 px-6 py-3 rounded-xl text-sm font-bold text-blue-700 hover:bg-blue-100">📎 بطاقة السكن</button>
+                    </div>
+                </div>
+
+                <button class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-5 rounded-2xl text-xl shadow-lg transition-all">تأكيد طلب الحجز</button>
+            </form>
+        </div>
+    </main>
+
+    <div class="fixed bottom-6 left-6 z-50 text-left">
+        <button onclick="toggleChat()" class="bg-blue-900 text-white p-5 rounded-2xl shadow-2xl hover:scale-110 transition-all font-bold flex items-center gap-2">
+            <span>🤖</span> اسأل المساعد الذكي
+        </button>
+        <div id="chatBox" class="hidden w-80 h-[450px] bg-white shadow-2xl rounded-3xl border border-blue-100 flex flex-col mb-4 overflow-hidden absolute bottom-20 left-0">
+
+LAYTH AMER ALI, [2/11/2026 9:31 PM]
 <div class="bg-blue-900 p-4 text-white font-bold flex justify-between">
                 <span>المساعد الذكي</span>
                 <button onclick="toggleChat()">✕</button>
