--- a/index.html
+++ b/index.html
@@ -52,7 +52,16 @@ LAYTH AMER ALI, [2/11/2026 10:08 PM]
             </div>
         </div>
     </section>
-
+<section class="max-w-4xl mx-auto px-4 mb-6">
+    <div class="bg-blue-50 border-r-4 border-blue-900 p-5 rounded-2xl shadow-sm">
+        <h4 class="font-black text-blue-900 flex items-center gap-2">
+            ⚠️ تنبيهات هامة للمستأجرين:
+        </h4>
+        <p class="text-sm text-blue-800 mt-2 leading-relaxed">
+            يرجى إرفاق صورة البطاقة الموحدة وبطاقة السكن لضمان سرعة تأكيد الحجز. يتم التواصل معكم عبر الواتساب فور إرسال الطلب.
+        </p>
+    </div>
+</section>
     <main class="max-w-4xl mx-auto p-4 mb-20">
         <div class="bg-white rounded-[3rem] shadow-2xl overflow-hidden border border-blue-50">
             <div class="hero-gradient p-10 text-white text-center">
