--- a/index.html
+++ b/index.html
@@ -99,7 +99,19 @@ LAYTH AMER ALI, [2/11/2026 10:08 PM]
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                         <input type="file" class="bg-white p-2 rounded-xl border w-full text-xs">
                         <input type="file" class="bg-white p-2 rounded-xl border w-full text-xs">
-                    </div>
+                    </div ("id="adminpanel<section class="max-w-4xl mx-auto px-4 mb-8">
+    <div class="bg-slate-900 rounded-[2rem] p-6 text-white shadow-2xl border-b-4 border-yellow-500">
+        <div class="flex justify-between items-center">
+            <div>
+                <h3 class="text-xl font-black italic">🔐 بوابة الإدارة المركزية</h3>
+                <p class="text-xs text-slate-400 mt-1">صلاحية التعديل الشامل على الأسعار والمرافق</p>
+            </div>
+            <button onclick="toggleAdminPanel()" class="bg-yellow-500 hover:bg-yellow-600 text-slate-900 px-6 py-3 rounded-2xl font-black transition-all active:scale-95 shadow-lg shadow-yellow-500/20">
+                دخول المدير
+            </button>
+        </div>
+    </div>
+</section> > 
                 </div>
 
                 <button type="button" onclick="sendWhatsApp()" class="w-full bg-green-600 hover:bg-green-700 text-white font-black py-5 rounded-2xl text-xl shadow-xl transition-all active:scale-95">
