Add admin panel access button in index.html
Added a button for admin panel access.

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ LAYTH AMER ALI, [2/11/2026 10:08 PM]
         <div class="flex justify-between items-center">
             <div>
                 <h3 class="text-xl font-black italic">🔐 بوابة الإدارة المركزية</h3>
-                <p class="text-xs text-slate-400 mt-1">صلاحية التعديل الشامل على الأسعار والمرافق</p>
+               <button type="button" onclick="toggleAdminPanel()" class="bg-yellow-500 hover:bg-yellow-600 text-slate-900 px-6 py-3 rounded-2xl font-black transition-all active:scale-95 shadow-lg shadow-yellow-500/20">دخول المدير</button>
             </div>
             <button onclick="toggleAdminPanel()" class="bg-yellow-500 hover:bg-yellow-600 text-slate-900 px-6 py-3 rounded-2xl font-black transition-all active:scale-95 shadow-lg shadow-yellow-500/20">
                 دخول المدير
