--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ LAYTH AMER ALI, [2/11/2026 10:08 PM]
                <button type="button" onclick="toggleAdminPanel()" class="bg-yellow-500 hover:bg-yellow-600 text-slate-900 px-6 py-3 rounded-2xl font-black transition-all active:scale-95 shadow-lg shadow-yellow-500/20">دخول المدير</button>
             </div>
             <button onclick="toggleAdminPanel()" class="bg-yellow-500 hover:bg-yellow-600 text-slate-900 px-6 py-3 rounded-2xl font-black transition-all active:scale-95 shadow-lg shadow-yellow-500/20">
-                دخول المدير
+           <button type="button" onclick="toggleAdminPanel()" class="bg-yellow-500 hover:bg-yellow-600 text-slate-900 px-6 py-3 rounded-2xl font-black transition-all active:scale-95 shadow-lg shadow-yellow-500/20">دخول المدير</button>
             </button>
         </div>
     </div>
