--- a/index.html
+++ b/index.html
@@ -103,13 +103,12 @@ LAYTH AMER ALI, [2/11/2026 10:08 PM]
     <div class="bg-slate-900 rounded-[2rem] p-6 text-white shadow-2xl border-b-4 border-yellow-500">
         <div class="flex justify-between items-center">
             <div>
-              <h3 class="text-xl font-black italic">🔐 بوابة الإدارة المركزية | صلاحية التعديل الشامل</h3>
-               <button type="button" onclick="toggleAdminPanel()" class="bg-yellow-500 hover:bg-yellow-600 text-slate-900 px-6 py-3 rounded-2xl font-black transition-all active:scale-95 shadow-lg shadow-yellow-500/20">دخول المدير</button>
-            </div>
-            <button onclick="toggleAdminPanel()" class="bg-yellow-500 hover:bg-yellow-600 text-slate-900 px-6 py-3 rounded-2xl font-black transition-all active:scale-95 shadow-lg shadow-yellow-500/20">
-           <button type="button" onclick="toggleAdminPanel()" class="bg-yellow-500 hover:bg-yellow-600 text-slate-900 px-6 py-3 rounded-2xl font-black transition-all active:scale-95 shadow-lg shadow-yellow-500/20">دخول المدير</button>
-            </button>
-        </div>
+       <div class="flex flex-col items-center gap-4">
+    <h3 class="text-xl font-black italic">🔐 بوابة الإدارة المركزية | التعديل الشامل</h3>
+    <button type="button" onclick="toggleAdminPanel()" class="bg-yellow-500 hover:bg-yellow-600 text-slate-900 px-10 py-3 rounded-2xl font-black transition-all active:scale-95 shadow-lg">
+        دخول المدير
+    </button>
+</div>      
     </div>
 </section> > 
                 </div>
