--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ LAYTH AMER ALI, [2/11/2026 10:08 PM]
                     <p class="text-[10px] text-yellow-600 font-bold tracking-[0.2em] uppercase">الترفيهية - تجربة ملكية</p>
                 </div>
             </div>
-            <button onclick="toggleAdminPanel()" class="bg-slate-900 text-white px-5 py-2 rounded-xl text-xs font-bold hover:bg-black transition-all">بوابة المدير ⚙️</button>
+            <button type="button" onclick="toggleAdminPanel()" class="bg-slate-900 text-white px-5 py-2 rounded-xl text-xs font-bold hover:bg-black transition-all">بوابة المدير ⚙️</button>
         </div>
     </nav>
 
