--- a/index.html
+++ b/index.html
@@ -154,12 +154,14 @@ LAYTH AMER ALI, [2/11/2026 10:08 PM]
 
     <script>
         // وظائف بوابة المدير
-        function toggleAdminPanel() {
-            const pin = prompt("أدخل رمز المدير للصلاحيات الشاملة:");
-            if(pin === "1234") document.getElementById('adminPanel').classList.remove('hidden');
-            else if(pin !== null) alert("الرمز غير صحيح!");
-        }
-
+       function toggleAdminPanel() {
+    const pin = prompt("أدخل رمز المدير للصلاحيات الشاملة:");
+    if(pin === "1234") {
+        document.getElementById('adminPanel').classList.remove('hidden');
+    } else if(pin !== null) {
+        alert("الرمز غير صحيح!");
+    }
+} 
         function saveAdminChanges() {
             const price = document.getElementById('priceInput').value;
             if(price) {
