Fix HTML structure for admin panel section

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ LAYTH AMER ALI, [2/11/2026 10:08 PM]
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                         <input type="file" class="bg-white p-2 rounded-xl border w-full text-xs">
                         <input type="file" class="bg-white p-2 rounded-xl border w-full text-xs">
-                    </div ("id="adminpanel<section class="max-w-4xl mx-auto px-4 mb-8">
+                    <div id="adminPanel" class="max-w-4xl mx-auto px-4 mb-8 hidden">
                 </div>
                 <button type="button" onclick="sendWhatsApp()" class="w-full bg-green-600 hover:bg-green-700 text-white font-black py-5 rounded-2xl text-xl shadow-xl transition-all active:scale-95">
                     تأكيد الحجز والإرسال عبر الواتساب 💬
