--- a/index.html
+++ b/index.html
@@ -106,8 +106,7 @@ LAYTH AMER ALI, [2/11/2026 10:08 PM]
         </button>
     </form>
 </div>
-
-<div id="adminPanel" class="hidden fixed inset-0 z-[100] bg-black/60 backdrop-blur-sm flex items-center justify-center p-4">
+<div id="newAdminPanel" class="hidden fixed inset-0 z-[100] bg-black/60 backdrop-blur-sm flex items-center justify-center p-4">
     <div class="bg-white w-full max-w-lg rounded-[2.5rem] shadow-2xl overflow-hidden">
         <div class="bg-slate-900 p-6 text-white flex justify-between items-center">
             <span class="font-black">⚙️ لوحة تحكم المدير</span>
