--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ LAYTH AMER ALI, [2/11/2026 10:08 PM]
             <span class="font-black">⚙️ لوحة تحكم المدير</span>
             <button onclick="document.getElementById('adminPanel').classList.add('hidden')" class="text-xl">✕</button>
         </div>
-        <div class="p-8 space-y-6">
+        <button type="button" onclick="document.getElementById('newAdminPanel').classList.add('hidden')" class="text-xl">✕</button>
             <div>
                 <label class="block font-bold mb-2">تعديل سعر الإيجار</label>
                 <input type="number" id="priceInput" class="w-full p-4 border rounded-xl" placeholder="أدخل السعر الجديد">
