--- a/index.html
+++ b/index.html
@@ -107,58 +107,18 @@ LAYTH AMER ALI, [2/11/2026 10:08 PM]
     </form>
 </div>
 <div id="newAdminPanel" class="hidden fixed inset-0 z-[100] bg-black/60 backdrop-blur-sm flex items-center justify-center p-4">
+ <div id="finalAdminPanel" class="hidden fixed inset-0 z-[100] bg-black/60 backdrop-blur-sm flex items-center justify-center p-4">
     <div class="bg-white w-full max-w-lg rounded-[2.5rem] shadow-2xl overflow-hidden">
         <div class="bg-slate-900 p-6 text-white flex justify-between items-center">
             <span class="font-black">⚙️ لوحة تحكم المدير</span>
-            <button onclick="document.getElementById('adminPanel').classList.add('hidden')" class="text-xl">✕</button>
+            <button type="button" onclick="document.getElementById('finalAdminPanel').classList.replace('flex', 'hidden')" class="text-xl">✕</button>
         </div>
-        <button type="button" onclick="document.getElementById('newAdminPanel').classList.add('hidden')" class="text-xl">✕</button>
+        <div class="p-8 space-y-6">
             <div>
-                <label class="block font-bold mb-2">تعديل سعر الإيجار</label>
-                <input type="number" id="priceInput" class="w-full p-4 border rounded-xl" placeholder="أدخل السعر الجديد">
+                <label class="block font-bold mb-2">تعديل السعر</label>
+                <input type="number" id="priceInput" class="w-full p-4 border rounded-xl" placeholder="أدخل السعر">
             </div>
-            <button onclick="saveAdminChanges()" class="w-full bg-slate-900 text-white py-4 rounded-xl font-bold">حفظ التعديلات</button>
+            <button type="button" onclick="saveAdminChanges()" class="w-full bg-slate-900 text-white py-4 rounded-xl font-bold">حفظ</button>
         </div>
     </div>
-</div>
-
-<script>
-// وظيفة فتح بوابة المدير
-function toggleAdminPanel() {
-    var pin = prompt("أدخل رمز المدير للصلاحيات الشاملة:");
-    if (pin === "1234") {
-        var panel = document.getElementById('adminPanel');
-        if (panel) {
-            panel.classList.remove('hidden');
-            panel.classList.add('flex');
-        }
-    } else if (pin !== null) {
-        alert("الرمز غير صحيح!");
-    }
-}
-
-// وظيفة حفظ التعديلات
-function saveAdminChanges() {
-    var price = document.getElementById('priceInput').value;
-    if (price) {
-        var display = document.getElementById('displayPrice');
-        if (display) display.innerText = price + " دينار";
-        alert("تم تحديث السعر بنجاح!");
-        document.getElementById('adminPanel').classList.add('hidden');
-    }
-}
-
-// وظيفة الواتساب
-function sendWhatsApp() {
-    var name = document.getElementById('custName').value;
-    var phone = document.getElementById('custPhone').value;
-    if (!name || !phone) {
-        alert("يرجى إكمال الاسم ورقم الهاتف!");
-        return;
-    }
-    document.getElementById('newAdminPanel').classList.remove('hidden');
-    window.open("https://wa.me/964XXXXXXXXXX?text=" + encodeURIComponent(msg));
-}
-</script>
-</body>
-</html>
+</div>   
