--- a/index.html
+++ b/index.html
@@ -93,23 +93,112 @@
 
     /* طبقة الجزيئات الذهبية المتطايرة */
     .particles-overlay {
-        position: absolute;
-        inset: 0;
-        background: url('https://www.transparenttextures.com/patterns/stardust.png');
-        opacity: 0.3;
-        mix-blend-mode: screen;
-        pointer-events: none;
-        animation: drift 30s linear infinite;
+       <style>
+    /* قسم الشبكة الملكية */
+    .gallery-container {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+        gap: 20px;
+        padding: 40px 0;
     }
 
-    /* تأثير الإضاءة السينمائية المتحركة */
-    .vignette-ultra {
+    .gallery-item {
+        position: relative;
+        height: 400px;
+        border-radius: 25px;
+        overflow: hidden;
+        border: 1px solid rgba(197, 160, 89, 0.2);
+        cursor: pointer;
+        transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .gallery-item img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transition: transform 1.2s ease;
+    }
+
+    .gallery-item:hover {
+        transform: translateY(-10px);
+        border-color: var(--gold);
+        box-shadow: 0 20px 40px rgba(0,0,0,0.6);
+    }
+
+    .gallery-item:hover img {
+        transform: scale(1.1);
+    }
+
+    /* الستارة المعلوماتية (Overlay) */
+    .item-info {
         position: absolute;
         inset: 0;
-        background: radial-gradient(circle at 50% 50%, 
-                    transparent 0%, 
-                    rgba(0,0,0,0.2) 40%, 
-                    rgba(5,5,5,0.8) 100%);
+        background: linear-gradient(to top, rgba(0,0,0,0.9) 0%, transparent 60%);
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        padding: 30px;
+        opacity: 0;
+        transition: opacity 0.4s ease;
+    }
+
+    .gallery-item:hover .item-info {
+        opacity: 1;
+    }
+
+    .category-tag {
+        font-size: 10px;
+        color: var(--gold);
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        margin-bottom: 5px;
+    }
+</style>
+
+<section id="gallery" class="max-w-7xl mx-auto px-6 py-20">
+    <div class="mb-16 text-center">
+        <h2 class="text-4xl font-black gold-gradient-text italic mb-4">ألبوم الواحة الملكية</h2>
+        <div class="h-[2px] w-24 bg-gold mx-auto opacity-50"></div>
+    </div>
+
+    <div class="gallery-container">
+        <div class="gallery-item group">
+            <img src="https://images.unsplash.com/photo-1576013551627-0cc20b96c2a7?q=80&w=1200" alt="المسبح الملكي">
+            <div class="item-info">
+                <span class="category-tag">الاستجمام</span>
+                <h4 class="text-xl font-bold">المسبح الأولمبي الذكي</h4>
+                <p class="text-xs text-gray-400 mt-2">نظام تدفئة وتعقيم عالمي مع إضاءة ليلية سينمائية.</p>
+            </div>
+        </div>
+
+        <div class="gallery-item group md:col-span-2">
+            <img src="https://images.unsplash.com/photo-1600607687940-47a04b6bd9a1?q=80&w=1200" alt="الصالة">
+            <div class="item-info">
+                <span class="category-tag">التصميم الداخلي</span>
+                <h4 class="text-xl font-bold">ردهة الاستقبال الكبرى</h4>
+                <p class="text-xs text-gray-400 mt-2">أثاث إيطالي فاخر مع إطلالة بانورامية على الحديقة.</p>
+            </div>
+        </div>
+
+        <div class="gallery-item">
+            <img src="https://images.unsplash.com/photo-1585320806297-9794b3e4eeae?q=80&w=1200" alt="الحدائق">
+            <div class="item-info">
+                <span class="category-tag">الطبيعة</span>
+                <h4 class="text-xl font-bold">الجلسات الخارجية</h4>
+                <p class="text-xs text-gray-400 mt-2">مساحات خضراء شاسعة مصممة وفق أحدث طرز اللاندسكيب.</p>
+            </div>
+        </div>
+
+        <div class="gallery-item">
+            <img src="https://images.unsplash.com/photo-1590490360182-c33d57733427?q=80&w=1200" alt="الأجنحة">
+            <div class="item-info">
+                <span class="category-tag">الخصوصية</span>
+                <h4 class="text-xl font-bold">الجناح الملكي</h4>
+                <p class="text-xs text-gray-400 mt-2">هدوء تام ورفاهية لا توصف لإقامة لا تُنسى.</p>
+            </div>
+        </div>
+    </div>
+</section>
         z-index: 1;
     }
 
